Fixed alignment of profile page on small screens, added unique key to profileURLS - can now be changed

--- a/src/Components/Chat-Message/chat-message.css
+++ b/src/Components/Chat-Message/chat-message.css
@@ -2,7 +2,7 @@
   max-width: 500px;
   display: flex;
   align-items: center;
-  padding-bottom: 1.75rem;
+  margin-bottom: 2rem;
   position: relative;
 }
 
@@ -77,6 +77,18 @@
   position: absolute;
   top: 0;
   transform: translateY(-20px);
+  min-width: 150px;
+}
+
+.msg-sent-from-user {
+  font-size: 0.75rem;
+  color: var(--Clr-Mid-Gray);
+  position: absolute;
+  top: 0;
+  transform: translateY(-20px);
+  min-width: 150px;
+  text-align: right;
+  right: 0;
 }
 
 
